8220344: Build failures when using --with-jvm-features=-g1gc,-jfr

Reviewed-by: tschatzl, zgu